--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"fractol.h": "c",
 		"ft_printf.h": "c",
-		"_types.h": "c"
+		"_types.h": "c",
+		"stdio.h": "c"
 	}
 }
