--- a/mandatory/Makefile
+++ b/mandatory/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-MODE	:= debug
+MODE	:= normal
 
 ifeq ($(MODE),debug)
 	CFLAGS	+= -g3
